# ErsterALLES-trading-brain

./: .gitignore  README-TRADING-VISION.md  README.md  pyproject.toml
architecture/: system-overview.md
config/: market-sources.yaml  paperclip-ceo-cloud-env.example  trading-params.yaml
docs/: ANALYSE_Scalper_Live.md  ELITE_BOT_MARKETPLACE.md  MONETIZATION_STRATEGY.md  RESUME_STATE.md  TASK_QUEUE.yaml  ers8-heartbeat-comment.md  paperclip-cloud-agent-api-key.md
ingestion/: browser_video_extract.js  check_paperclip_v3.js  check_skills_v4.js  fix_paperclip_v2.js  import_skills_v5.js  paperclip_login_v4.js  video_analyzer.py  video_auto_pipeline.py  youtube-video-ingestion.md
plans/: cursor-paperclip-integration.md  ers8-recovered-next-step.md  foundation-progress-log.md  paperclip-foundation-readiness-report.md  paperclip-readiness-audit.md  phase-0-and-mvp-plan.md
reports/: performance_dashboard.py
schemas/: trading-brain-data-model.md
scripts/: ers8-next-step.sh  install-ers8-paperclip-skills.sh  install-trading-skills.sh  paperclip-api-comment.sh  paperclip-board-ers8.sh  paperclip-create-api-key-child-issue.sh  paperclip-ers8-board-mark-blocked.sh  paperclip-ers8-disposition.sh  paperclip-preflight.sh  paperclip-resolve-api-key.sh  trading_cycle.py  verify-ers8-skills.sh
security/: generate_secret.py  outbound_firewall.py  watermark.py
skills/: market-data  signal-scoring  trading-foundation
tests/: test_risk.py
trading-engine/: metamask_tracker.py  position_tracker.py  run_collector_once.py  shadow_executor.py  signal_collector.py  (+1 more)
(+11 files in other folders)
